Clean and refactor code && upgrate new version gorm (v2)
